Closed Bug 257276 Opened 20 years ago Closed 20 years ago

Loading XBL bindings may corrupt cached display style

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: neil, Assigned: neil)

Details

Attachments

(1 file, 1 obsolete file)

When constructing the document element frame the display style is computed to
retrieve the XBL binding. After the XBL has been bound the display style is then
rechecked to see if the document requires scrollbars or is a table. However the
load of the XBL binding may require style to be reresolved which will invalidate
the previously cached display style.

Without the fix to bug 72747 the invalidated values are simply treated as an
unscrollable non-table, which is correct for a xul dialog or wizard. However the
fix to bug 72747 is confused by the invalid style and creates scrollframes where
none are necessary.
Attached patch Proposed patch (obsolete) — Splinter Review
Assignee: dbaron → neil.parkwaycc.co.uk
Status: NEW → ASSIGNED
Comment on attachment 157280 [details] [diff] [review]
Proposed patch

Just fetch the display style again.
Attachment #157280 - Flags: superreview?(dbaron)
Attachment #157280 - Flags: review?(dbaron)
Comment on attachment 157280 [details] [diff] [review]
Proposed patch

r+sr=dbaron if you fix ConstructFrameInternal too.
Attachment #157280 - Flags: superreview?(dbaron)
Attachment #157280 - Flags: superreview+
Attachment #157280 - Flags: review?(dbaron)
Attachment #157280 - Flags: review+
Attachment #157280 - Attachment is obsolete: true
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: