Bug 257276 ConstructDocElementFrame and ConstructFrameInternal need to update their display style cache after reresolving style for XBL r+sr=dbaron